deployment/kubernetes/_namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signalcd
---
apiVersion: v1
kind: Namespace
metadata:
  name: signalcd-demo
