deployment/kubernetes/signalcd-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalcd-agent
  namespace: signalcd-demo
  labels:
    app: signalcd-agent
spec:
  selector:
    matchLabels:
      app: signalcd-agent
  template:
    metadata:
      labels:
        app: signalcd-agent
    spec:
      serviceAccountName: signalcd-agent
      containers:
        - name: api
          image: quay.io/signalcd/agent:latest
          imagePullPolicy: Always
          args:
            - --api.url=signalcd-api.signalcd.svc.cluster.local:6661
            - --name=signalcd-demo
            - --namespace=signalcd-demo
            - --serviceaccount=signalcd-agent
