deployment/kubernetes/signalcd-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalcd-api
  namespace: signalcd
  labels:
    app: signalcd-api
spec:
  selector:
    app: signalcd-api
  ports:
    - port: 6660
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalcd-api
  namespace: signalcd
  labels:
    app: signalcd-api
spec:
  selector:
    matchLabels:
      app: signalcd-api
  template:
    metadata:
      labels:
        app: signalcd-api
    spec:
      containers:
        - name: api
          image: quay.io/signalcd/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6660
              name: http
