deployment/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: signalcd
  namespace: signalcd
  labels:
    app: signalcd
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: signalcd-auth # You need to create this secret
spec:
  rules:
    - host: signalcd.example.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: signalcd-api
              servicePort: 6660
          - path: /
            backend:
              serviceName: signalcd-ui
              servicePort: 6662
  tls:
    - secretName: signalcd-tls
      hosts:
        - signalcd.example.com
